# easy_market

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: analysis_options.yaml  pubspec.yaml
app/integration_test/: generate_flow_test.dart
app/lib/: app.dart  main.dart
app/lib/data/: api_client.dart  history_store.dart  seed_templates.dart
app/lib/data/mappers/: packaging_mapper.dart
app/lib/l10n/: app_strings.dart  strings_en.dart  strings_ru.dart
app/lib/models/: packaging_request.dart  packaging_request_dto.dart  packaging_response.dart  packaging_response_dto.dart
app/lib/ui/screens/history/: history_screen.dart
app/lib/ui/theme/: app_theme.dart
app/lib/ui/widgets/: app_scaffold.dart  error_state.dart  glass_card.dart  glass_loader.dart  primary_button.dart  result_tabs.dart
app/lib/utils/: prompt_options.dart  validators.dart
app/test/helpers/: sample_data.dart  test_app.dart
app/test/unit/: dto_domain_test.dart  mappers_test.dart  prompt_options_test.dart  validators_test.dart
app/test/widget/: error_state_test.dart  history_list_test.dart  result_tabs_test.dart  wizard_flow_test.dart
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/providers/: base.py  gigachat.py  mock.py  yandex.py
backend/app/schemas/: packaging_request.schema.json  packaging_response.schema.json
backend/app/services/: generator.py
backend/app/utils/: ids.py
backend/tests/: conftest.py  test_contract_schema.py  test_endpoints.py  test_mock_provider.py
docs/: API.md  Product.md  Prompting.md  QA.md  UX.md
(+5 files in other folders)
